# pupil-emotion-detection

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
include/: image.h
src/: image.cpp
